<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundGray"
    tools:context="com.sukajee.splitexpense.ui.registration.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registeration Form"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:padding="0dp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:background="@android:color/transparent"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:background="@android:color/transparent"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:background="@android:color/transparent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="10"
                android:digits="0123456789"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:background="@android:color/transparent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:background="@android:color/transparent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPasswordRequirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/password_requrement_text"
                android:textColor="#EF0000"
                android:textSize="10sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:background="@android:color/transparent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_registered"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rounded"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBarCircular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_gravity="center"
            />
    </LinearLayout>

</ScrollView>