<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    tools:context="com.sukajee.splitexpense.ui.login.LoginFragment">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="30dp">

        <ProgressBar
            android:id="@+id/progressBarCircular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />


        <ImageView
            android:id="@+id/imageViewDummyUser"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingBottom="30dp"
            android:src="@drawable/dummie_user" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewDummyUser"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/email"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_below="@id/textInputEmail"
            android:textColorHint="@color/colorAccent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_rounded"
            android:paddingVertical="6dp"
            android:layout_below="@id/textInputPassword"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewNotRegistered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/not_registered_yet"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/buttonLogin"
            android:textSize="12dp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:paddingVertical="6dp"
            android:layout_below="@id/textViewNotRegistered"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18sp" />


    </RelativeLayout>

</ScrollView>